--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
     "express": "^4.17.1",
     "pg": "^8.6.0",
     "sequelize": "^6.6.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7",
+    "sequelize-cli": "^6.2.0"
   }
 }
