--- a/package.json
+++ b/package.json
@@ -26,5 +26,9 @@
     "nodemailer": "^6.5.0",
     "pg": "^8.6.0",
     "sequelize": "^6.6.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7",
+    "sequelize-cli": "^6.2.0"
   }
 }
