--- a/config/config.json
+++ b/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "postgres",
     "password": "123",
-    "database": "angel_service",
+    "database": "angelService",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
